# pagda

./: README.md  default.nix  flake.nix  pagda.cabal
app/: AgdaLib.hs  Main.hs  Templates.hs
nix/: agda-web-docs-lib.nix  callAgdaLib2nix.nix
nix/docBackends/: enhancedHtml.nix  offline-search.js
test/e2e/cases/build-gitignored/: output.golden  setup.sh
test/e2e/cases/build-gitignored/initial/: flake.nix
test/e2e/cases/check-flags/: cmd  output.golden
test/e2e/cases/check-project/: output.golden
test/e2e/cases/clean/: output.golden  setup.sh
test/e2e/cases/clean/initial/_build/2.8.0/: Test.agdai
test/e2e/cases/init/: output.golden
test/e2e/cases/init-existing/: output.golden
test/e2e/cases/init-existing-keep-flake/: cmd  output.golden
test/e2e/cases/init-existing-keep-flake/initial/: flake.nix  mylib.agda-lib
test/e2e/cases/init-existing-no-lib/: cmd  output.golden
test/e2e/cases/init-existing/initial/: mylib.agda-lib
test/e2e/cases/init-here/: output.golden
test/e2e/cases/init-prompt/: output.golden
test/e2e/cases/init-refuse/: cmd  output.golden
test/e2e/cases/init-refuse/initial/: Test.agda  original.agda-lib
test/e2e/cases/regenerate/: output.golden
test/regression/: Main.hs
test/regression/cases/baseline/: baseline.agda-lib  expected.nix
test/regression/cases/blank-lines/: blanky.agda-lib  expected.nix
test/regression/cases/comma-separated/: commas.agda-lib  expected.nix
test/regression/cases/dirname-fallback/: expected.nix
test/regression/cases/field-order/: expected.nix  ordered.agda-lib
test/regression/cases/flags-before-depend/: expected.nix  flagged.agda-lib
test/regression/cases/inline-comment/: expected.nix  inline.agda-lib
test/regression/cases/leading-comment/: commented.agda-lib  expected.nix
test/regression/cases/malformed-line/: broken.agda-lib
test/regression/cases/multiple-per-line/: expected.nix  multi.agda-lib
test/regression/cases/name-differs-from-file/: expected.nix  file-name.agda-lib
test/regression/cases/no-final-newline/: expected.nix  nofinal.agda-lib
test/regression/cases/no-name-field/: expected.nix
test/regression/cases/tab-indent/: expected.nix  tabbed.agda-lib
test/regression/cases/trailing-whitespace/: expected.nix  trailing.agda-lib
test/regression/cases/version-dedup/: dedup.agda-lib  expected.nix
test/regression/cases/versioned-deps/: expected.nix  versioned.agda-lib
