cabal-version: 3.0
name:          pagda
version:       0.1.0.0
synopsis:      Agda package manager using Nix
category:      Development
homepage:      https://github.com/WhatisRT/pagda
author:        WhatisRT
license:       MIT
build-type:    Simple

common warnings
    ghc-options: -Wall

executable pagda
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base >=4.18 && <5
                    , optparse-applicative >=0.18
                    , parsec >=3.1
                    , filepath
                    , directory
                    , process
                    , text
                    , regex-tdfa
                    , unordered-containers

    default-language: GHC2021
    other-modules:    AgdaLib
                    , Templates
