cabal-version: 3.0
name:          pagda
version:       0.1.0.0
synopsis:      Agda package manager using Nix
category:      Development
homepage:      https://github.com/WhatisRT/pagda
author:        WhatisRT
license:       MIT
build-type:    Simple

common warnings
    ghc-options: -Wall

executable pagda
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base >=4.18 && <5
                    , optparse-applicative >=0.18
                    , parsec >=3.1
                    , filepath
                    , directory
                    , process
                    , unordered-containers

    default-language: GHC2021
    other-modules:    AgdaLib
                    , Templates

test-suite e2e
    import:             warnings
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test/e2e
    build-depends:      base >=4.18 && <5
                      , bytestring
                      , directory
                      , extra
                      , filepath
                      , process
                      , tasty
                      , tasty-golden
                      , text
    build-tool-depends: pagda:pagda
    default-language:   GHC2021

test-suite regression
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/regression, app
    other-modules:    AgdaLib
    build-depends:    base >=4.18 && <5
                    , bytestring
                    , parsec >=3.1
                    , filepath
                    , directory
                    , tasty
                    , tasty-golden
                    , tasty-hunit
    default-language: GHC2021
